[tool.poetry]
name = "realstate-crawler"
version = "0.1.0"
description = ""
authors = ["Matheus Costa <matheeusferreeira@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.12.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
isort = "^5.13.2"
taskipy = "^1.12.2"
pytest = "^8.1.1"



[tool.poetry.group.mkdocs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.19"
mkdocstrings-python = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
